--- a/public/templates/about.template.html
+++ b/public/templates/about.template.html
@@ -4,11 +4,12 @@
             <div class="col-md-4">
 
                 <section>
-                    <h2>Welcome to Minimaxing!</h2>
-                    <p>This is <strong>Minimaxing</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> and released for free by <a href="http://html5up.net">HTML5 UP</a>. It features
-                        a simple, lightweight design, solid HTML5 and CSS3 code, and full responsive support for desktop, tablet, and mobile displays.</p>
+                    <h2>Про компанію</h2>
+                    <p>Компанія «Wines» в Україні представляє інтереси міжнародної
+                        корпорації «International Corporation Inc.» та входить в одну з найбільших в Україні
+                        фінансово-промислову групу «Wines Group».</p>
                     <footer>
-                        <a href="#" class="button">More cool designs ...</a>
+                        <a href="#" class="button">Детальніше</a>
                     </footer>
                 </section>
 
@@ -16,17 +17,17 @@
             <div class="col-md-4">
 
                 <section>
-                    <h2>Who are you guys?</h2>
+                    <h2>Засновники</h2>
                     <ul class="small-image-list">
                         <li>
                             <a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-                            <h4>Jane Anderson</h4>
-                            <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis.</p>
+                            <h4>Борат Сагдієв</h4>
+                            <p>Генеральний директор</p>
                         </li>
                         <li>
                             <a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
-                            <h4>James Doe</h4>
-                            <p>Vitae magna eget odio amet mollis justo facilisis amet quis. Sed sagittis consequat.</p>
+                            <h4>Павло Зібров</h4>
+                            <p>Виконавчий директор</p>
                         </li>
                     </ul>
                 </section>
@@ -35,25 +36,25 @@
             <div class="col-md-4">
 
                 <section>
-                    <h2>How about some links?</h2>
+                    <h2>Наші партнери</h2>
                     <div>
                         <div class="row">
-                            <div class="6u 12u(mobile)">
+                            <div class="col-md-6">
                                 <ul class="link-list">
-                                    <li><a href="#">Sed neque nisi consequat</a></li>
-                                    <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                    <li><a href="#">Quis accumsan lorem</a></li>
-                                    <li><a href="#">Suspendisse varius ipsum</a></li>
-                                    <li><a href="#">Eget et amet consequat</a></li>
+                                    <li><a href="#">Microsoft Corporation</a></li>
+                                    <li><a href="#">Google</a></li>
+                                    <li><a href="#">Nokia Corp.</a></li>
+                                    <li><a href="#">Samsung</a></li>
+                                    <li><a href="#">Apple</a></li>
                                 </ul>
                             </div>
-                            <div class="6u 12u(mobile)">
+                            <div class="col-md-6">
                                 <ul class="link-list">
-                                    <li><a href="#">Quis accumsan lorem</a></li>
-                                    <li><a href="#">Sed neque nisi consequat</a></li>
-                                    <li><a href="#">Eget et amet consequat</a></li>
-                                    <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                    <li><a href="#">Vitae magna sed dolore</a></li>
+                                    <li><a href="#">Heineken</a></li>
+                                    <li><a href="#">Jack Daniels</a></li>
+                                    <li><a href="#">Tekila</a></li>
+                                    <li><a href="#">Horilka Corp.</a></li>
+                                    <li><a href="#">Zakuska Inc.</a></li>
                                 </ul>
                             </div>
                         </div>
