--- a/public/templates/home.template.html
+++ b/public/templates/home.template.html
@@ -15,58 +15,58 @@
             <div class="col-md-6">
 
                 <section>
-                    <h2>An assortment of pictures and text</h2>
-                    <p>Duis neque nisi, dapibus sed mattis quis, rutrum et accumsan.
-                        Suspendisse nibh. Suspendisse vitae magna eget odio amet mollis
-                        justo facilisis quis. Sed sagittis mauris amet tellus gravida
-                        lorem ipsum dolor sit amet consequat blandit lorem ipsum dolor
-                        sit amet consequat sed dolore.</p>
+                    <h2>Лідерство Wines,
+                        компанія світового класу</h2>
+                    <p>З маленької торгівельної компанії Wines перетворилася на корпорацію світового класу,
+                        бізнес якої охоплює прогресивні технології, виробництво напівпровідників,
+                        будівництво хмарочосів і заводів, нафтохімію, моду, медицину, фінанси,
+                        готельну справу та багато іншого. Наші відкриття, винаходи та інноваційні
+                        продукти дали нам змогу стати лідером цих індустрій, постійно розвиваючи їх.</p>
                     <ul class="big-image-list">
                         <li>
                             <a href="#"><img src="images/pic3.jpg" alt="" class="left" /></a>
-                            <h3>Magna Gravida Dolore</h3>
-                            <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-                                facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-                                Maecenas eu arcu purus, phasellus fermentum elit.</p>
+                            <h3>Wines у нашому житті,
+                                поліпшення повсякденних умов</h3>
+                            <p>Wines незмінно ділиться з людьми по всьому світу своїм перетворюючим досвідом,
+                                від інновацій в області споживчої електроніки до біофармацевтичних розробок.
+                                Прихильні ідеї створення чудових продуктів і послуг у всіх областях бізнесу,
+                                ми прагнемо поліпшити життя людей і привнести позитивні зміни в оточуючий світ.</p>
                         </li>
                         <li>
                             <a href="#"><img src="images/pic4.jpg" alt="" class="left" /></a>
-                            <h3>Magna Gravida Dolore</h3>
-                            <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-                                facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-                                Maecenas eu arcu purus, phasellus fermentum elit.</p>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
-                            <h3>Magna Gravida Dolore</h3>
-                            <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-                                facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-                                Maecenas eu arcu purus, phasellus fermentum elit.</p>
+                            <h3>Внесок Wines,
+                                незмінна соціальна відповідальність</h3>
+                            <p>Ми вимірюємо свої успіхи не лише досягненнями в бізнесі, а й тим,
+                                наскільки успішно ми служимо суспільству, піклуємося про збереження
+                                ресурсів планети та привносимо зміни в людські життя. Ми відчуваємо
+                                відповідальність за те, щоб створити позитивний корпоративний імідж й
+                                усюди в світі діяти на благо суспільного прогресу, оберігати та
+                                покращувати довкілля, а також зміцнювати соціальні стандарти.</p>
                         </li>
                     </ul>
                 </section>
 
             </div>
             <div class="col-md-6">
-
                 <article class="blog-post">
-                    <h2>Just another blog post</h2>
+                    <h2>Ще один пост</h2>
                     <a class="comments" href="#">33 comments</a>
                     <a href="#"><img src="images/pic6.jpg" alt="" class="top blog-post-image" /></a>
-                    <h3>Magna Gravida Dolore</h3>
-                    <p>Aenean non massa sapien. In hac habitasse platea dictumst.
-                        Maecenas sodales purus et nulla sodales aliquam. Aenean ac
-                        porttitor metus. In hac habitasse platea dictumst. Phasellus
-                        blandit turpis in leo scelerisque mollis. Nulla venenatis
-                        ipsum nec est porta rhoncus. Mauris sodales sed pharetra
-                        nisi nec consectetur. Cras elit magna, hendrerit nec
-                        consectetur in, sollicitudin vitae justo. Cras amet aliquet
-                        Aliquam ligula turpis, feugiat id fermentum malesuada,
-                        rutrum eget turpis. Mauris sodales sed pharetra nisi nec
-                        consectetur. Cras elit magna, hendrerit nec consectetur
-                        in sollicitudin vitae.</p>
+                    <h3>Взаємне сприяння</h3>
+                    <p>Бізнес не буває успішним, якщо не веде до процвітання і відкриття можливостей для інших.
+                        Компанія Wines прагне бути соціально та екологічно відповідальним корпоративним
+                        громадянином у кожній спільноті, де ми ведемо свою діяльність, на всій земній кулі.</p>
+                    <a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
+                    <h3>Wines створює можливості,
+                        корпорація відкриттів</h3>
+                    <p>Наша мета проста: це надання вам свободи подорожувати, відкривати для себе
+                        новий досвід; піклуватися про наш світ. Це надання можливості пов'язати те,
+                        ким ви є сьогодні, з тим, ким ви хочете стати завтра. У світі, що змінюється,
+                        люди змінюються швидше. Ми незмінно прагнемо відкриттів та новаторства,
+                        створення технологій і надання послуг, які роблять нас сильнішими та
+                        відкривають двері у світ можливого.</p>
                     <footer class="controls">
-                        <a href="#" class="button">Continue Reading</a>
+                        <a href="#" class="button">Продовжити</a>
                     </footer>
                 </article>
 
