--- a/public/templates/main.template.html
+++ b/public/templates/main.template.html
@@ -42,73 +42,75 @@
     <div id="footer-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-
+                <div class="col-md-8 col-sm-12">
                     <section>
-                        <h2>How about a truckload of links?</h2>
                         <div>
                             <div class="row">
-                                <div class="col-md-3">
-                                    <ul class="link-list">
-                                        <li><a href="#">Sed neque nisi consequat</a></li>
-                                        <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                        <li><a href="#">Quis accumsan lorem</a></li>
-                                        <li><a href="#">Suspendisse varius ipsum</a></li>
-                                        <li><a href="#">Eget et amet consequat</a></li>
+                                <div class="col-md-3 col-sm-6">
+                                    <h3>Режим работы</h3>
+                                    <ul>
+                                        <li>Пн-Сб: 10<sup>00</sup>-18<sup>00</sup></li>
+                                        <li>Вихідний: Неділя</li>
+                                        <li>(093) 11-11-111</li>
+                                        <li>(098) 11-11-111</li>
+                                        <li>(099) 11-11-111</li>
+                                        <li>wines@my-site.com.ua</li>
                                     </ul>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
+                                    <h3>Інформація</h3>
                                     <ul class="link-list">
-                                        <li><a href="#">Quis accumsan lorem</a></li>
-                                        <li><a href="#">Sed neque nisi consequat</a></li>
-                                        <li><a href="#">Eget et amet consequat</a></li>
-                                        <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                        <li><a href="#">Vitae magna sed dolore</a></li>
+                                        <li><a href="#">Оформлення візи в Польщу та Шенген</a></li>
+                                        <li><a href="#">Контакти</a></li>
+                                        <li><a href="#">Оплата і доставка</a></li>
+                                        <li><a href="#">Умови використання</a></li>
                                     </ul>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
+                                    <h3>Додатково</h3>
                                     <ul class="link-list">
-                                        <li><a href="#">Sed neque nisi consequat</a></li>
-                                        <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                        <li><a href="#">Quis accumsan lorem</a></li>
-                                        <li><a href="#">Suspendisse varius ipsum</a></li>
-                                        <li><a href="#">Eget et amet consequat</a></li>
+                                        <li><a href="#">Бренди</a></li>
+                                        <li><a href="#">Подарункові сертифікати</a></li>
+                                        <li><a href="#">Партнерська програма</a></li>
+                                        <li><a href="#">Спеціальні</a></li>
+                                        <li><a href="#"></a></li>
                                     </ul>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-6">
+                                    <h3>Обліковий запис</h3>
                                     <ul class="link-list">
-                                        <li><a href="#">Quis accumsan lorem</a></li>
-                                        <li><a href="#">Sed neque nisi consequat</a></li>
-                                        <li><a href="#">Eget et amet consequat</a></li>
-                                        <li><a href="#">Dapibus sed mattis blandit</a></li>
-                                        <li><a href="#">Vitae magna sed dolore</a></li>
+                                        <li><a href="#">Обліковий запис</a></li>
+                                        <li><a href="#">Історія замовлень</a></li>
+                                        <li><a href="#">Список бажаних товарів</a></li>
+                                        <li><a href="#">Розсилання новин</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </section>
-
                 </div>
-                <div class="col-md-4">
 
+                <div class="col-md-4 col-sm-12 socialSection">
                     <section>
-                        <h2>Something of interest</h2>
-                        <p>Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-                            Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet
-                            mollis justo facilisis quis. Sed sagittis mauris amet tellus gravida
-                            lorem ipsum dolor sit amet consequat blandit.</p>
-                        <footer class="controls">
-                            <a href="#" class="button">Oh, please continue ....</a>
-                        </footer>
+                        <h3>Підписатись на розсилку новин:</h3>
+                        <input type="email" name="email" id="email"><br><br>
+                        <input type="submit" class="btn-success" value="Підписатись">
                     </section>
-
+                    <div class="social">
+                        <a class="socialButtons" id="facebook"></a>
+                        <a class="socialButtons" id="vk"></a>
+                        <a class="socialButtons" id="youtube"></a>
+                        <a class="socialButtons" id="twitter"></a>
+                        <a class="socialButtons" id="picasso"></a>
+                        <a class="socialButtons" id="googlePlus"></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
 
                     <div id="copyright">
-                        &copy; Copyright. All rights reserved.
+                        &copy; 2017 Компанія Wines. Усі права захищені.
                     </div>
 
                 </div>
