--- a/public/template/ngCart/cart.html
+++ b/public/template/ngCart/cart.html
@@ -44,10 +44,11 @@
             <td><span ng-click="ngCart.removeItemById(item.getId())" class="glyphicon glyphicon-remove"></span></td>
 
             <td>{{ item.getName() }}</td>
-            <td><span class="glyphicon glyphicon-minus" ng-class="{'disabled':item.getQuantity()==1}"
+            <td><span class="glyphicon glyphicon-minus" ng-class="{'disabled':item.getQuantity() <= item.getQuantityMin()}"
                       ng-click="item.setQuantity(-1, true)"></span>&nbsp;&nbsp;
                 {{ item.getQuantity() | number }}&nbsp;&nbsp;
-                <span class="glyphicon glyphicon-plus" ng-click="item.setQuantity(1, true)"></span></td>
+                <span class="glyphicon glyphicon-plus" ng-class="{'disabled':item.getQuantity() >= item.getQuantityMax()}"
+                      ng-click="item.setQuantity(1, true)"></span></td>
             <td>{{ item.getPrice() | currency}}</td>
             <td>{{ item.getTotal() | currency }}</td>
         </tr>
