--- a/public/template/ngCart/cart.html
+++ b/public/template/ngCart/cart.html
@@ -22,21 +22,21 @@
             <td></td>
             <td></td>
             <td>Податок ({{ ngCart.getTaxRate() }}%):</td>
-            <td>{{ ngCart.getTax() | currency }}</td>
+            <td>{{ ngCart.getTax() | currency: '₴ ' }}</td>
         </tr>
         <tr ng-show="ngCart.getShipping()">
             <td></td>
             <td></td>
             <td></td>
             <td>Доставка:</td>
-            <td>{{ ngCart.getShipping() | currency }}</td>
+            <td>{{ ngCart.getShipping() | currency: '₴ ' }}</td>
         </tr>
         <tr>
             <td></td>
             <td></td>
             <td></td>
             <td>Загальна сума:</td>
-            <td>{{ ngCart.totalCost() | currency }}</td>
+            <td>{{ ngCart.totalCost() | currency: '₴ ' }}</td>
         </tr>
         </tfoot>
         <tbody>
@@ -44,13 +44,13 @@
             <td><span ng-click="ngCart.removeItemById(item.getId())" class="glyphicon glyphicon-remove"></span></td>
 
             <td>{{ item.getName() }}</td>
-            <td><span class="glyphicon glyphicon-minus" ng-class="{'disabled':item.getQuantity() <= item.getQuantityMin()}"
+            <td id="cartDisabledTd"><span class="glyphicon glyphicon-minus" ng-class="{'disabled':item.getQuantity() <= item.getQuantityMin()}"
                       ng-click="item.setQuantity(-1, true)"></span>&nbsp;&nbsp;
                 {{ item.getQuantity() | number }}&nbsp;&nbsp;
                 <span class="glyphicon glyphicon-plus" ng-class="{'disabled':item.getQuantity() >= item.getQuantityMax()}"
                       ng-click="item.setQuantity(1, true)"></span></td>
-            <td>{{ item.getPrice() | currency}}</td>
-            <td>{{ item.getTotal() | currency }}</td>
+            <td>{{ item.getPrice() | currency: '₴ '}}</td>
+            <td>{{ item.getTotal() | currency: '₴ '}}</td>
         </tr>
         </tbody>
     </table>
