--- a/public/templates/home.template.html
+++ b/public/templates/home.template.html
@@ -1,5 +1,5 @@
 <div id="banner-wrapper">
-    <div class="container">
+    <div class="container banner-container">
 
         <div id="banner">
             <h2>наша компанія</h2>
