--- a/public/templates/products.template.html
+++ b/public/templates/products.template.html
@@ -1,56 +1,9 @@
 <div id="main">
     <div class="container">
-        <div class="row main-row">
-            <div class="col-md-10">
-
-                <section>
-                    <h2>Наша продукція</h2>
-                        <div class="products col-md-4" ng-repeat="product in $ctrl.products">
-                            <section class="col-md-4">
-                            <a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-                            </section>
-                            <section class="col-md-8">
-                            <h4>{{product.name}}</h4>
-                            <p>{{product.price | currency: $}}</p>
-                            <footer>
-                                <ngcart-addtocart id="{{ product.id }}"
-                                                  name="{{ product.name }}"
-                                                  price="{{ product.price }}"
-                                                  quantity="{{ product.min_quantity }}"
-                                                  quantity-min="{{ product.min_quantity }}"
-                                                  quantity-max="{{ product.max_quantity }}">
-                                    Add to Cart
-                                </ngcart-addtocart>
-                            </footer>
-                            </section>
-                        </div>
-                </section>
-
-            </div>
-            <div class="col-md-2">
-
-                <section>
-                    <input type="text" id="searchField" name="search">
-                    <br><br>
-                    <input type="submit" class="btn-success" id="searchButton" value="Пошук">
-
-                    <hr>
-
-                    <h3>Фільтрувати за ціною:</h3>
-                    <table>
-                        <tbody>
-                        <tr>
-                            <td><input title="min-price" class="moneyFilter" type="number" min="0" value="0"></td>
-                            <td>-</td>
-                            <td><input title="max-price" class="moneyFilter" type="number" min="0" value="500"></td>
-                            <td>грн.</td>
-                        </tr>
-                        </tbody>
-                    </table>
-
-                </section>
-
-            </div>
+        <div class="productsNav">
+            <a class="col-md-6 productsLink" ng-link="['Wines']">Вина</a>
+            <a class="col-md-6 productsLink" ng-link="['Grocery']">Продукты</a>
         </div>
+        <ng-outlet></ng-outlet>
     </div>
 </div>
